profile page and avatar

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -2,6 +2,11 @@
   Edit #{resource_name.to_s.humanize}
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
   = devise_error_messages!
+  = image_tag @user.avatar.url
+  %p
+    = f.label :avatar
+    %br/
+    = f.file_field :avatar
   %p
     = f.label :first_name
     %br/
