--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,1 +1,16 @@
-%h1 Header
+.topbar{"data-scrollspy" => "scrollspy"}
+  .topbar-inner
+    .container
+      %a.brand{:href => "#"} RadChat
+      %ul.nav
+        %li.active
+          %a{:href => "#"} Chat 1
+        %li
+          %a{:href => "#1"} Chat 2
+
+      .pull-right
+        %ul.nav
+          %li
+            %a{:href => "#"} Profile
+          %li
+            %a{:href => "#"} Settings
