Fixed styles for registration page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,8 +13,9 @@
 
       #main{ :role => 'main' }
         = render "layouts/flashes"
-        = yield
-      .push
+        .wrapper
+          = yield
+        .push
 
     %footer#footer
       = render "layouts/footer"
