--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,29 +1,40 @@
-%h2 Sign up
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  %p
-    = f.label :first_name
-    %br/
-    = f.text_field :first_name
-  %p
-    = f.label :last_name
-    %br/
-    = f.text_field :last_name
-  %p
-    = f.label :username
-    %br/
-    = f.text_field :username
-  %p
-    = f.label :email
-    %br/
-    = f.email_field :email
-  %p
-    = f.label :password
-    %br/
-    = f.password_field :password
-  %p
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation
-  %p= f.submit "Sign up"
-= render :partial => "devise/shared/links"
+.row
+  .span4
+    %h2 Welcome to RadChat
+    %p RadChat is bla bla bla. Please register.
+    = render :partial => "devise/shared/links"
+  .span12
+    = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+      = devise_error_messages!
+      %fieldset
+        %legend Example form legend
+        .clearfix
+          = f.label :first_name
+          .input
+            = f.text_field :first_name
+        .clearfix
+          = f.label :last_name
+          .input
+            = f.text_field :last_name
+        .clearfix
+          = f.label :username
+          .input
+            = f.text_field :username
+        .clearfix
+          = f.label :email
+          .input
+            = f.text_field :email
+        .clearfix
+          = f.label :password
+          .input
+            = f.password_field :password
+        .clearfix
+          = f.label :password_confirmation
+          .input
+            = f.password_field :password_confirmation
+
+        / /clearfix
+        .actions
+          = f.submit "Sign up", :class => "btn primary"
+          \&nbsp;
+          %button.btn{:type => "reset"} Cancel
