--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,1 @@
-- if user_signed_in?
-  = link_to "Sign out", destroy_user_session_path
-  = link_to "Profile", edit_user_registration_path
-- else
-  = link_to "Sign in", user_session_path
-  = link_to "Register", new_user_registration_path
+%p Home page
