--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 .topbar{"data-scrollspy" => "scrollspy"}
   .topbar-inner
     .container
-      %a.brand{:href => "#"} RadChat
+      = link_to "RadChat", root_path, :class => 'brand'
       %ul.nav
         %li.active
           %a{:href => "#"} Chat 1
@@ -10,7 +10,11 @@
 
       .pull-right
         %ul.nav
-          %li
-            %a{:href => "#"} Profile
-          %li
-            %a{:href => "#"} Settings
+          - if user_signed_in?
+            %li= link_to "Profile", edit_user_registration_path
+            %li= link_to "Settings", '#'
+            %li= link_to "Sign out", destroy_user_session_path
+          - else
+            %li= link_to "Sign in", user_session_path
+            %li= link_to "Register", new_user_registration_path
+
