--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -25,6 +25,10 @@
           .input
             = f.text_field :email
         .clearfix
+          = f.label :user_company
+          .input
+            = f.text_field :user_company
+        .clearfix
           = f.label :password
           .input
             = f.password_field :password
