--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,43 +1,46 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-  = devise_error_messages!
-  = image_tag @user.avatar.url
-  %p
-    = f.label :avatar
-    %br/
-    = f.file_field :avatar
-  %p
-    = f.label :first_name
-    %br/
-    = f.text_field :first_name
-  %p
-    = f.label :last_name
-    %br/
-    = f.text_field :last_name
-  %p
-    = f.label :username
-    %br/
-    = f.text_field :username
-  %p
-    = f.label :email
-    %br/
-    = f.email_field :email
-  %p
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password
-  %p
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation
-  %p
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password
-  %p= f.submit "Update"
+.row
+  .span4
+    %h2 Edit your profile
+    %p This is the place you can edit your profile
+    = render :partial => "devise/shared/links"
+  .span12
+    = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+      = devise_error_messages!
+      %fieldset
+        %legend EDIT!!!!!
+        .clearfix
+          = f.label :avatar
+          = image_tag @user.avatar.url
+          %br/
+          = f.file_field :avatar
+        .clearfix
+          = f.label :first_name
+          .input
+            = f.text_field :first_name
+        .clearfix
+          = f.label :last_name
+          .input
+            = f.text_field :last_name
+        .clearfix
+          = f.label :username
+          .input
+            = f.text_field :username
+        .clearfix
+          = f.label :email
+          .input
+            = f.email_field :email
+        .clearfix
+          = f.label :password
+          .input
+            = f.password_field :password
+        .clearfix
+          = f.label :password_confirmation
+          .input
+            = f.password_field :password_confirmation
+
+        / /clearfix
+        .actions
+          = f.submit "Sign in", :class => "btn primary"
 %h3 Cancel my account
 %p
   Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete}.
