--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,6 +12,7 @@
         %ul.nav
           - if user_signed_in?
             %li= link_to "Profile", edit_user_registration_path
+            %li= link_to "Lobby", lobby_users_path
             %li= link_to "Settings", '#'
             %li= link_to "Sign out", destroy_user_session_path
           - else
