--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -14,7 +14,7 @@
             %li= link_to "Profile", edit_user_registration_path
             %li= link_to "Lobby", lobby_users_path
             %li= link_to "Settings", '#'
-            %li= link_to "Sign out", destroy_user_session_path
+            %li= link_to "Sign Out", destroy_user_session_path, :method => :delete
           - else
             %li= link_to "Sign in", user_session_path
             %li= link_to "Register", new_user_registration_path
