--- a/app/views/rooms/new.html.haml
+++ b/app/views/rooms/new.html.haml
@@ -20,7 +20,7 @@
             = f.text_field :description
         / /clearfix
         .actions
-          = f.submit "Sign up", :class => "btn primary"
+          = f.submit "Create", :class => "btn primary"
           \&nbsp;
           %button.btn{:type => "reset"} Cancel
 
