implemented user invite

--- a/app/views/invitations_mailer/invitation_email.html.haml
+++ b/app/views/invitations_mailer/invitation_email.html.haml
@@ -5,4 +5,6 @@ just set up an account for you on RadChat, our group chat system.
 All you need to do is choose a username and password.
 
 CLICK THIS LINK TO GET STARTED:
-=link_to "#{confirm_invitations_url(:inv_token => @invitation.invitation_token)}", confirm_invitations_url(:inv_id => @invitation.invitation_token)
+=link_to "#{confirm_invitations_url(:inv_token => @invitation.invitation_token)}", confirm_invitations_url(:inv_token => @invitation.invitation_token)
+
+=@invitation.message
