--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,6 +13,7 @@
           - if user_signed_in?
             %li= link_to "Profile", edit_user_registration_path
             %li= link_to_if current_user.current_company_id, "Lobby", company_path(current_user.current_company)
+            %li= link_to "Users", people_path
             %li= link_to "Settings", edit_company_path(current_user.current_company)
             %li= link_to "Sign out", destroy_user_session_path, :method => :delete
           - else
