--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     -# just copy _stylesheets.html.haml, and point to that partial instead.
     = render "layouts/head", :stylesheet_partial => "layouts/stylesheets"
 
-  %body{ :class => "#{controller.controller_name}" }
+  %body{ :id => body_id }
     #container
       %header#header
         = render "layouts/header"
