--- a/app/views/companies/edit.html.haml
+++ b/app/views/companies/edit.html.haml
@@ -3,9 +3,14 @@
     %h2 Welcome to RadChat
     %p RadChat is bla bla bla. Please register.
   .span12
-    = form_for(@company) do |f|
+    = form_for @company, :html => { :multipart => true } do |f|
       %fieldset
         %legend Edit Company
+        .clearfix
+          = f.label :avatar
+          = image_tag @company.avatar.url
+          .input
+            = f.file_field :avatar
         .clearfix
           = f.label :name
           .input
