--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -4,7 +4,7 @@
     %p This is the place you can edit your profile
     = render :partial => "devise/shared/links"
   .span12
-    = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+    = form_for(resource, :as => resource_name, :url => registration_path(resource_name),:html => { :method => :put, :multipart => true }) do |f|
       = devise_error_messages!
       %fieldset
         %legend EDIT!!!!!
@@ -37,10 +37,14 @@
           = f.label :password_confirmation
           .input
             = f.password_field :password_confirmation
+        .clearfix
+          = f.label :current_password
+          .input
+            = f.password_field :current_password
 
         / /clearfix
         .actions
-          = f.submit "Sign in", :class => "btn primary"
+          = f.submit "Update your account", :class => "btn primary"
 %h3 Cancel my account
 %p
   Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete}.
