--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -17,6 +17,6 @@
             %li= link_to "Settings", edit_company_path(current_user.current_company)
             %li= link_to "Sign out", destroy_user_session_path, :method => :delete
           - else
-            %li= link_to "Sign in", user_session_path
-            %li= link_to "Register", new_user_registration_path
+            %li{:class => (params[:controller] == "devise/sessions" && ['new', 'create'].include?(params[:action]) ? 'active' : nil)}= link_to "Sign in", user_session_path
+            %li{:class => (params[:controller] == "devise/registrations" && ['new', 'create'].include?(params[:action]) ? 'active' : nil)}= link_to "Register", new_user_registration_path
 
