--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,26 +1,18 @@
 .row
   .span4
-    %h2 Edit your profile
-    %p This is the place you can edit your profile
-    = render :partial => "devise/shared/links"
+    %h3 Cancel my account
+    %p
+      Unhappy? #{link_to "Cancel account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete}.
   .span12
     = form_for(resource, :as => resource_name, :url => registration_path(resource_name),:html => { :method => :put, :multipart => true }) do |f|
       = devise_error_messages!
       %fieldset
-        %legend EDIT!!!!!
+        %legend Edit your profile
         .clearfix
           = f.label :avatar
-          = image_tag @user.avatar.url
-          %br/
-          = f.file_field :avatar
-        .clearfix
-          = f.label :first_name
+          = image_tag @user.avatar.url if @user.avatar.present?
           .input
-            = f.text_field :first_name
-        .clearfix
-          = f.label :last_name
-          .input
-            = f.text_field :last_name
+            = f.file_field :avatar
         .clearfix
           = f.label :username
           .input
@@ -29,6 +21,14 @@
           = f.label :email
           .input
             = f.email_field :email
+        .clearfix
+          = f.label :first_name
+          .input
+            = f.text_field :first_name
+        .clearfix
+          = f.label :last_name
+          .input
+            = f.text_field :last_name
         .clearfix
           = f.label :password
           .input
@@ -45,7 +45,3 @@
         / /clearfix
         .actions
           = f.submit "Update your account", :class => "btn primary"
-%h3 Cancel my account
-%p
-  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete}.
-= link_to "Back", :back
