--- a/app/views/room_memberships/edit.html.haml
+++ b/app/views/room_memberships/edit.html.haml
@@ -1,12 +1,14 @@
-%h1= "#{@room.name} members:"
-
-= link_to "<< back", room_path(@room)
-
-= form_tag room_memberships_url, :method => :put do
-  %ul
-    - @users.each do |user|
-      %li
-        %span= label_tag :"user_#{user.id}", user.full_name
-        %span= check_box_tag :"room[user_ids][]", user.id, @room.users.include?(user), :id => :"user_#{user.id}"
-    %li
-      = submit_tag :save
+.row
+  .span4
+    %h2 Edit membership
+  .span12
+    = form_tag room_memberships_url, :method => :put do
+      %fieldset
+        %legend= "Edit \"#{@room.name}\" membership:"
+        - @users.each do |user|
+          .clearfix
+            = label_tag :"user_#{user.id}", user.full_name
+            .input
+              = check_box_tag :"room[user_ids][]", user.id, @room.users.include?(user), :id => :"user_#{user.id}"
+        .actions
+          = submit_tag "Update Membership", :class => "btn primary"
