--- a/app/views/company_memberships/edit.html.haml
+++ b/app/views/company_memberships/edit.html.haml
@@ -1,15 +1,17 @@
-= link_to "Invite a new user", new_invitation_path
-
-%h1= "#{@company.name} members:"
-
-= form_tag company_memberships_url, :method => :put do
-  %ul
-    - @memberships.each do |membership|
-      %li
-        %span= label_tag :"company_membership_#{membership.id}", membership.user.full_name
-        -if membership.user.owner?(@company)
-          %span Owner
-        -else
-          %span= select_tag :"company[company_membership_ids][#{membership.id}]", options_for_select([["Admin", CompanyMembership::ADMIN], ["Member", CompanyMembership::MEMBER]], :selected => membership.user.role?(@company)), {:id => :"company_membership_#{membership.id}"}
-    %li
-      = submit_tag :save
+.row
+  .span4
+    %h2 Edit roles
+  .span12
+    = form_tag company_memberships_url, :method => :put do
+      %fieldset
+        %legend= "Edit \"#{@company.name}\" user roles:"
+        - @memberships.each do |membership|
+          .clearfix
+            = label_tag :"company_membership_#{membership.id}", membership.user.full_name
+            .input
+              -if membership.user.owner?(@company)
+                %span Owner
+              -else
+                %span= select_tag :"company[company_membership_ids][#{membership.id}]", options_for_select([["Admin", CompanyMembership::ADMIN], ["Member", CompanyMembership::MEMBER]], :selected => membership.user.role?(@company)), {:id => :"company_membership_#{membership.id}"}
+        .actions
+          = submit_tag "Update Roles", :class => "btn primary"
