Improved chat room styles

--- a/app/assets/stylesheets/partials/_page.sass
+++ b/app/assets/stylesheets/partials/_page.sass
@@ -62,3 +62,46 @@ footer
   width: 960px
   margin: 0 auto
   padding-top: 30px
+
+
+#chat_line
+  bottom: 0px
+  color: #FFFFFF
+  position: fixed
+  width: 100%
+  background-color: #DDDDDD
+  left: 0
+
+
+  input[type=text]
+    width: 600px
+    height: 23px
+    margin-top: 2px
+
+form#new_message
+  display: block
+  height: 40px
+  margin: 0 auto
+  width: 960px
+
+
+
+#chat_room
+  margin-bottom: 40px
+  tr
+    // border-bottom: 1px solid #DDDDDD
+
+    td
+      // border: none
+
+
+    td:nth-child(1)
+      width: 150px
+      background: #F9F9F9
+      text-align: right
+
+
+#chat_box
+  width: 600px
+  height: 300px
+  overflow-y: scroll
