More style fixes

--- a/app/views/company_memberships/edit.html.haml
+++ b/app/views/company_memberships/edit.html.haml
@@ -1,4 +1,9 @@
 .row
+  .span13
+    &nbsp;
+  .span3= link_to "Invite your friend", new_invitation_path, :class => 'btn'
+
+.row
   .span4
     %h2 Edit roles
   .span12
